# ocr_trans_overlay

./: .gitignore  LICENSE  app.py  names.ini  pyproject.toml  readme.md  settings.json
